[package]
name = "svn-list-parallel-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
async-std = { version = "1.10.0", features = ["attributes"] }
svn-cmd = { git = "https://github.com/rajputrajat/svn-cmd.git" }
